--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -25,6 +25,7 @@
   white-space: nowrap;
   color: #212121;
   opacity: 70%;
+  font-weight: 500;
 }
 
 .profile__edit-btn:hover {
@@ -33,10 +34,12 @@
 
 .profile__name {
   margin: 0 0 12px;
+  font-weight: 500;
 }
 
 .profile__description {
   margin: 0;
+  font-weight: 500;
 }
 
 .profile__add-btn {
@@ -51,6 +54,7 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
+  font-weight: 500;
 }
 
 .profile__add-btn img {
