--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,6 +5,8 @@
 }
 
 .profile__avatar {
+  height: 190px;
+  width: 190px;
   margin-right: 20px;
 }
 
@@ -26,6 +28,8 @@
   color: #212121;
   opacity: 70%;
   font-weight: 500;
+  line-height: 1;
+  font-size: 16px;
 }
 
 .profile__edit-btn:hover {
@@ -35,11 +39,16 @@
 .profile__name {
   margin: 0 0 12px;
   font-weight: 500;
+  line-height: 1;
+  font-size: 32px;
 }
 
 .profile__description {
   margin: 0;
+  color: rgba(33, 33, 33, 0.7);
   font-weight: 500;
+  line-height: 1;
+  font-size: 16px;
 }
 
 .profile__add-btn {
@@ -55,6 +64,8 @@
   justify-content: center;
   gap: 8px;
   font-weight: 500;
+  line-height: 1;
+  font-size: 16px;
 }
 
 .profile__add-btn img {
@@ -64,4 +75,43 @@
 
 .profile__add-btn:hover {
   background-color: rgba(33, 33, 33, 0.8);
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .profile__avatar {
+    margin: 0 0 12px;
+    height: 80px;
+    width: 80px;
+  }
+
+  .profile__name {
+    font-size: 20px;
+    margin: 0 0 6px;
+  }
+
+  .profile__description {
+    font-size: 16px;
+    margin: 0 0 32px;
+  }
+
+  .profile__column {
+    margin: 0 0 20px;
+    align-items: center;
+  }
+
+  .profile__add-btn {
+    margin-left: 0;
+    margin-top: 0;
+    max-width: 100%;
+    width: 288px;
+    height: 52px;
+  }
 }
