--- a/blocks/card.css
+++ b/blocks/card.css
@@ -17,6 +17,9 @@
   font-weight: 500;
   line-height: 24px;
   font-size: 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__like-button {
@@ -41,5 +44,6 @@
   .card__title {
     line-height: 1;
     font-size: 16px;
+    max-width: 288px;
   }
 }
