--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -41,6 +41,12 @@
   font-weight: 500;
   line-height: 1;
   font-size: 32px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
@@ -49,6 +55,12 @@
   font-weight: 500;
   line-height: 1;
   font-size: 16px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__add-btn {
@@ -95,11 +107,13 @@
   .profile__name {
     font-size: 20px;
     margin: 0 0 6px;
+    max-width: 288px;
   }
 
   .profile__description {
     font-size: 16px;
     margin: 0 0 32px;
+    max-width: 288px;
   }
 
   .profile__column {
