--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,6 +14,7 @@
 
 .card__title {
   margin: 12px 0 0 0;
+  max-width: 350px;
   font-weight: 500;
   line-height: 24px;
   font-size: 20px;
@@ -30,6 +31,7 @@
   background-color: transparent;
   border: none;
   opacity: 40%;
+  cursor: pointer;
 }
 
 .card__like-button:hover {
